--- a/Question_tracker.css
+++ b/Question_tracker.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
+a {
+    text-decoration: none;
+    color: #ff8c00;
+}
 
 body {
     display: flex;
