--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
 /* Global Styles */
+a {
+    text-decoration: none;
+    color: #ff8c00;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
