--- a/login.css
+++ b/login.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+a {
+    text-decoration: none;
+    color: #ff8c00;
+  }
 body{
     height: 100%;
     width: 100%;
